inté home page, ajustement, etc.

--- a/src/translations/fr_FR.json
+++ b/src/translations/fr_FR.json
@@ -1,7 +1,16 @@
 {
 	"pages": {
 		"home": {
-			"title": "Titre de la home"
+			"title": "Ma collection"
+		}
+	},
+	"common": {
+		"navbar": {
+			"collection": "Ma collection",
+			"settings": "Réglages",
+			"menu": "Menu principal",
+			"user": "Utilisateur",
+			"addItem": "Ajouter un object à ma collection"
 		}
 	}
 }
