--- a/src/translations/fr_FR.json
+++ b/src/translations/fr_FR.json
@@ -10,6 +10,10 @@
 				"placeholder": "rechercher..."
 			}
 		},
+		"new": {
+			"title": "Nouvel object",
+			"name": "Ajouter un objet à ma collection"
+		},
 		"help": {
 			"title": "Aide",
 			"name": "Page d'aide"
